--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.3",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "react": "^18",
